kubernetes/live/linode/larnev-hobled-lidled-mordev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: larnev-hobled-lidled-mordev-ames
  namespace: urbit
  labels:
    app: larnev-hobled-lidled-mordev
spec:
  ports:
    - name: ames
      port: 34344
      protocol: UDP
      targetPort: 34344
  selector:
    app: larnev-hobled-lidled-mordev
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: larnev-hobled-lidled-mordev-http
  namespace: urbit
  labels:
    app: larnev-hobled-lidled-mordev
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: larnev-hobled-lidled-mordev
  type: ClusterIP
---
